# study-simple-web-search-agent

./: .env.example  main.py  pyproject.toml
constants/: envs.py
model_services/: __init__.py  cerebras.py  model_service.py
routes/: chat.py
